styles/index.scss
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
@tailwind base;

/* Write your own custom base styles here */
html,
body,
div#__next {
  height: 100%;
  font-family: 'Open Sans', sans-serif;
  -webkit-font-smoothing: antialiased;
}

html {
  scroll-behavior: smooth;
}

img,
figure {
  max-width: 100%;
}

/* Start purging... */
@tailwind components;
/* Stop purging. */

/* Write you own custom component styles here */

/* Start purging... */
@tailwind utilities;
/* Stop purging. */

/* Your own custom utilities */

.has-text-align-left {
  @apply text-left;
}

.has-text-align-center {
  @apply text-center;
}

.has-text-align-right {
  @apply text-right;
}

.has-large-font-size {
  @apply text-4xl;
}

.alignfull {
  @apply w-screen relative;

  left: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
  max-width: 100vw;
  right: 50%;
}

.wp-block-image img {
  @apply max-w-full mt-2;
}

.wp-block-image.aligncenter {
  @apply text-center;
}

.wp-block-image.alignfull img,
.wp-block-image.alignwide img {
  @apply w-full;
}

.wp-block-image .alignleft,
.wp-block-image .alignright,
.wp-block-image .aligncenter,
.wp-block-image.is-resized {
  @apply table ml-0 mr-0;
}

.wp-block-image .alignleft > figcaption,
.wp-block-image .alignright > figcaption,
.wp-block-image .aligncenter > figcaption,
.wp-block-image.is-resized > figcaption {
  @apply table-caption;

  caption-side: bottom;
}

.wp-block-image .alignleft {
  @apply float-left mr-4;
}

.wp-block-image .alignright {
  @apply float-right ml-4;
}

.wp-block-image .aligncenter {
  @apply m-auto;
}

.wp-block-button a,
.wp-block-file a.wp-block-file__button {
  @apply bg-blue-600 text-white no-underline py-2 px-4;
}

.wp-block-button a:hover,
.wp-block-file a.wp-block-file__button:hover {
  @apply bg-blue-400 cursor-pointer;
}

.wp-block-file a:first-of-type {
  @apply mr-4;
}

.wp-block-cover {
  @apply flex flex-wrap justify-center items-center bg-cover bg-center overflow-hidden;

  min-height: 430px;
}

.wp-block-verse {
  @apply font-sans;
}

.wp-block-media-text {
  @apply grid grid-cols-2 gap-4;
}

p {
  a {
    @apply text-blue-600;
  }

  a:hover {
    @apply text-blue-400;
  }
}


.join-bm-slider-wrapper {
  background: #fafaff;

  h2 {
    font-family: "Open Sans";
    font-style: normal;
    font-weight: 700;
    font-size: 26px;
    line-height: 35px;
    margin-top: 26px;
    margin-bottom: 12px;
  }
  .join_bm_carousel_sec {
    margin-top: 35px;
    display: flex;
    gap: 10px;
  }
  .membersPhoto {
    width: 62%;
  }
  .country_count_col:not(:nth-of-type(3)) {
    padding-right: 40px;
  }
  .slick-dots li button:before {
    content: "";
    width: 12px;
    height: 12px;
    background: #ffffff;
    border: 1px solid #646464;
    border-radius: 100%;
    opacity: 1 !important;
  }
  .slick-dots li.slick-active button:before {
    background: #646464;
  }

  .slick-arrow {
    top: 35% !important;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .join_bm_desc {
    p {
      font-family: "Open Sans";
      font-style: normal;
      font-weight: 500;
      font-size: 16px;
      line-height: 150%;
      color: #524d42;
      margin: 0;
    }
  }
  .slider-image {
    width: fit-content;
    margin-left: auto;
    margin-right: auto;
    height: 350px;
    outline: none;
  }
  .volunteer-count {
    margin: auto;
    width: fit-content;
  }
  .volunteer-count-section {
    justify-content: center;
    align-items: flex-start !important;
    width: 340px;
  }
  .flex-row {
    display: flex !important;
    flex-wrap: wrap !important;
    align-items: center;
  }

  .text-data-custom {
    > p {
      display: inline-block;
      font-family: "Open Sans";
      font-style: normal;
      font-weight: 800;
      font-size: 38px;
      line-height: 52px;
      text-align: center;
      letter-spacing: 1.07288e-6px;
      background: linear-gradient(90deg, #3a62c8 -3.32%, #61b1ee 82.05%);
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
      background-clip: text;
      text-fill-color: transparent;
      margin: 0;
    }
    > pre {
      font-family: "Open Sans";
      font-style: normal;
      font-weight: 800;
      font-size: 12px;
      line-height: 16px;
      text-align: center;
      letter-spacing: 1.07288e-6px;
      background: linear-gradient(90deg, #3a62c8 -3.32%, #61b1ee 82.05%);
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
      background-clip: text;
      text-fill-color: transparent;
      margin: 0;
    }
  }
  .opportunity-section {
    margin-top: 30px;
    .title {
      font-family: "Open Sans";
      font-style: normal;
      font-weight: 600;
      font-size: 18px;
      line-height: 150%;
      color: #2c2d41;
      margin-top: 0 !important;
      margin-bottom: 8px;
    }
    .position-list {
      padding-left: 20px;
    }
    .pos_link_url {
      font-family: "Open Sans";
      font-style: normal;
      font-weight: 400;
      font-size: 14px;
      color: #2c2d41;
      transition: all 0.3s ease;

      &:hover {
        color: #3174d0;
      }
    }
    .apply_now_button {
      margin-top: 10px;
      display: inline-flex;
      justify-content: center;
      align-items: center;
      height: 30px;
      width: 116px;
      max-width: 116px;
      padding: 0;
      background: #f4ac3d;
      border-radius: 8px;
      text-transform: uppercase;
      color: #ffffff;
      font-style: normal;
      font-weight: 800;
      font-size: 12px;
      line-height: 14px;
      text-align: center;
      letter-spacing: normal;

      &:hover {
        background: #61b1ee;
      }
    }
  }
  .country-text {
    img {
      width: 20px;
      height: 20px;
    }
  }
}

@media (max-width: 1064px) {
  .join-bm-slider-wrapper .volunteer-count {
    padding-left: 0;
  }
}

@media (max-width: 767px) {
  .join-bm-slider-wrapper {
    .volunteer-count {
      margin: auto;
      width: 90% !important;
      flex-direction: column;
      .volunteer-count-section {
        width: 350px;
        flex-wrap: nowrap !important;
      }
      .opportunity-section {
        width: 350px;
      }
    }
  }
}

@media (max-width: 950px) {
  .join-bm-slider-wrapper {
    .join_bm_desc {
      p {
        font-weight: 400;
        font-size: 15px;
      }
    }
    .join_bm_carousel_sec {
      flex-direction: column;
      gap: 60px;
    }
    .membersPhoto {
      width: 85%;
      margin: 0 auto;
    }
    .slider-image {
      object-position: top center;
      margin: 0 auto;
    }
    .volunteer-count {
      display: flex;
      width: 75%;
      gap: 40px;
      margin: 0 auto;
    }
    .opportunity-section {
      margin-top: 0px;
      .title {
        padding-top: 0;
      }
    }
  }

  // Our-Partners Section custom styles

  .partner-logos-slider-wrapper {
    .slick-slide {
      padding: 0 5px;
      div {
        transition: none;
      }
      &:first-child {
        margin-left: 0;
        padding-left: 0;
      }
      &:last-child {
        margin-right: 18px;
        padding-right: 10px;
      }
    }
    /* the parent */
    .slick-list {
      padding: 0 -5x;
    }
  }
}

